--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "npx json-server --port 5000 src/db/db.json"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "json-server": "^1.0.0-beta.3",
     "next": "15.3.5",
     "react": "^19.0.0",
